fix the alignment issues in the tutorial screen

--- a/src/app/pages/tutorial/tutorial.scss
+++ b/src/app/pages/tutorial/tutorial.scss
@@ -38,7 +38,7 @@ ion-content {
 
 .slide-image {
   max-width: 80%;
-  max-height: 50%;
+  max-height: 500px;
 
   margin: -5vh 0 0;
   pointer-events: none;
